[gd_scene load_steps=4 format=3 uid="uid://ypbrmacj62l2"]

[ext_resource type="Script" path="res://inventory_slot.gd" id="1_mo4n7"]
[ext_resource type="Texture2D" uid="uid://d0472dokffred" path="res://icon.svg" id="2_ddxjt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bf6bj"]

[node name="InventorySlot" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 212.0
offset_top = 106.0
offset_right = 524.0
offset_bottom = 814.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mo4n7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 650.0
offset_bottom = 579.0

[node name="ItemIcon" type="Sprite2D" parent="ColorRect"]
z_index = 8
position = Vector2(363, 371)
scale = Vector2(2.13281, 2.30469)
texture = ExtResource("2_ddxjt")

[node name="ItemQuantity" type="Label" parent="ColorRect"]
z_index = 1
layout_mode = 0
offset_left = 81.0
offset_top = 33.0
offset_right = 252.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "1"

[node name="itemButton" type="Button" parent="."]
z_index = 20
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -22.0
offset_right = -2641.0
offset_bottom = -5126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bf6bj")

[node name="ColorRect" type="ColorRect" parent="itemButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.01075e-06, 0.367324, 0.367602, 1)

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 608.0
offset_right = 1917.0
offset_bottom = 1412.0
color = Color(0, 0, 0, 1)

[node name="itemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_right = 510.0
offset_bottom = 313.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "Name"

[node name="itemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -68.0
offset_right = 271.0
offset_bottom = 69.0
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "TYPE"

[node name="itemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Effect"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -19.0
offset_top = -1216.0
offset_right = 2105.0
offset_bottom = -168.0
color = Color(0, 0, 0, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_right = 2121.0
offset_bottom = 413.0
theme_override_font_sizes/font_size = 100
text = "USE"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1056.5
offset_top = -491.0
offset_right = 1056.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "DROP"

[connection signal="mouse_entered" from="itemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="itemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="itemButton" to="." method="_on_item_button_pressed"]
